Bug 1951249 [Wayland] Reset VSync state if VSync is enabled/disabled r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D244990